# abcli

./: .dev.env  .gitignore  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS  dependabot.yml
.github/config/: repo.json  topic.json
.github/config/branch-protection/: main.json
.github/scripts/: configure.sh
.github/workflows/: approve-on-condition.yaml  ci.yaml  clippy.yaml  configure.yaml
docs/adapters/api/: mod.rs
secure/: .gitignore  secrets.dev.json  secrets.json
src/: main.rs
src/adapters/: mod.rs  slack.rs
src/adapters/api/: client.rs  helpers.rs  models.rs
src/adapters/notion/: client.rs  helpers.rs  models.rs
src/adapters/notion/models/: page.rs  properties.rs  shared.rs
src/adapters/slack/: client.rs  stringer.rs
src/adapters/spotify/: client.rs  helpers.rs  models.rs
src/app/: mod.rs  secrets.rs  setup.rs
src/cli/: commands.rs
src/cli/commands/: base.rs  notion.rs  slack.rs  spotify.rs
templates/notion/pages/: daily.json
